--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+.text-platzi {
+  color: #97c93e !important;
+}
+
+#header img {
+ width: 80px; 
+}
+
 #footer {
   background: linear-gradient(90deg, #1c3643, #273b47 25%, #1e5372)
 }
@@ -5,3 +13,4 @@
 #footer a{
   color: white
 }
+
