--- a/index.css
+++ b/index.css
@@ -44,6 +44,15 @@
   height: 100%;
 }
 
+#place-time {
+  background-color: #343a40;
+  color: white;
+}
+
+#place-time img {
+  max-width: 100%;
+}
+
 #footer a{
   color: white
 }
